--- a/yl/domeen/index.html
+++ b/yl/domeen/index.html
@@ -17,7 +17,7 @@
         <div class="py-5 justify-content-center align-items-center">
             <div class="row gx-5 fw-semibold" style="color: #a9a9a9;">
                 <div class="col fs-3 text-center">
-                    <span class="rounded-circle py-2 text-white" style="background-color: #ff7171; padding-right: calc(1rem*1.45); padding-left: calc(1rem*1.45);">
+                    <span class="rounded-circle py-2 text-white" style="background-color: #ff7171; padding-right: 1.45rem; padding-left: 1.45rem;">
                         1
                     </span>
                     <div class="fs-5 py-3">
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="col fs-3 text-center">
-                    <span class="rounded-circle py-2 text-white" style="background-color: #bfbfbf; padding-right: calc(1rem*1.2); padding-left: calc(1rem*1.2);">
+                    <span class="rounded-circle py-2 text-white" style="background-color: #bfbfbf; padding-right: 1.2rem; padding-left: 1.2rem;">
                         2
                     </span>
                     <div class="fs-5 py-3">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="col fs-3 text-center">
-                    <span class="rounded-circle py-2 text-white" style="background-color: #bfbfbf; padding-right: calc(1rem*1.2); padding-left: calc(1rem*1.2);">
+                    <span class="rounded-circle py-2 text-white" style="background-color: #bfbfbf; padding-right: 1.2rem; padding-left: 1.2rem;">
                         3
                     </span>
                     <div class="fs-5 py-3">
@@ -47,43 +47,50 @@
         <h2 class="fw-semibold mb-5">
             Vali domeen
         </h2>
-        <div class="d-flex ps-3 align-items-center fs-5">
-            https://
-            <div class="input-group me-5">
-                <input type="text" class="form-control fw-light fs-5 my-auto border-3 rounded-4" placeholder="website name" />
-                <span class="input-group-text">
-                    <div class="dropdown">
-                        <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            .ee
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">.com</a></li>
-                            <li><a class="dropdown-item" href="#">.shop</a></li>
-                            <li><a class="dropdown-item" href="#">.ninja</a></li>
-                            <li><a class="dropdown-item" href="#">.code</a></li>
-                            <li><a class="dropdown-item" href="#">.web</a></li>
-                            <li><a class="dropdown-item" href="#">.eu</a></li>
-                        </ul>
-                    </div>
-                </span>
+        <form onsubmit="return next()" action="/index.html">
+            <div class="d-flex align-items-center fs-5">
+                https://
+                <div class="input-group me-5">
+                    <input type="text" name="domain" class="form-control my-auto border-3 rounded-4" placeholder="lehekülje nimi" required>
+                    <span class="input-group-text">
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                .ee
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">.com</a></li>
+                                <li><a class="dropdown-item" href="#">.shop</a></li>
+                                <li><a class="dropdown-item" href="#">.ninja</a></li>
+                                <li><a class="dropdown-item" href="#">.code</a></li>
+                                <li><a class="dropdown-item" href="#">.web</a></li>
+                                <li><a class="dropdown-item" href="#">.eu</a></li>
+                            </ul>
+                        </div>
+                    </span>
+                </div>
+                <button class="btn fw-semibold fs-4 me-5 px-5 text-white col-md-2" type="button" style="background-color: #ff7171;">
+                    Kontrolli
+                </button>
             </div>
-            <button class="btn fw-semibold fs-4 me-5 px-5 text-white" type="button" style="background-color: #ff7171;">
-                Kontrolli
+            <button class="d-flex fs-1 ps-3 mt-2 align-items-center border-0 bg-white" style="color: #a9a9a9;">
+                &#43
+                <div class="fs-4 ms-3">Lisa domeen</div>
             </button>
-        </div>
-        <button class="d-flex fs-1 ps-3 mt-2 align-items-center border-0 bg-white" style="color: #a9a9a9;">
-            &#43
-            <div class="fs-4 ms-3">Lisa domeen</div>
-        </button>
-        <div class="row justify-content-center">
-            <button onclick="window.location.href='./indexErr.html'" class="btn shadow text-white fs-4 py-2 fw-semibold mt-5 col-2" type="button" style="background-color: #38b47a;">
-                Jätka
-            </button>
-        </div>
+            <div class="d-flex justify-content-center">
+                <button class="btn shadow text-white fs-4 py-2 fw-semibold mt-5 col-md-2 mb-2" type="submit" style="background-color: #38b47a;">
+                    Jätka
+                </button>
+            </div>
+        </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-    <script></script>
+    <script>
+        function next() {
+            window.location.href = "./indexErr.html";
+            return false;
+        }
+    </script>
 </body>
 </html>
